--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -24,7 +24,7 @@
 {% endfor %}
 
  <div class="row">
-    <div class="col-12 mb-1">
+    <div class="col-12">
     {{ link.add(path('article_new'),'Create article' )}}
     </div>
     <div class="col-12 col-sm-12">
