--- a/templates/macros/link.html.twig
+++ b/templates/macros/link.html.twig
@@ -10,6 +10,6 @@
     <a class="btn btn-default" href="{{ path }} "> <i class="fa fa-arrow-circle-left" aria-hidden="true"></i> {{ text|default('back to list') }} </a>
 {% endmacro %}
 {% macro add(path,text) %}
-    <a class="btn btn-primary" href="{{ path }} "> {{ text|default('Create') }} <i class="fas fa-plus" aria-hidden="true"></i></a>
+    <a class="btn mb-1 btn-lg btn-primary" href="{{ path }} "> {{ text|default('Create') }} <i class="fas fa-plus" aria-hidden="true"></i></a>
 {% endmacro %}
 
