--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,6 +2,7 @@
 
 {% extends 'admin/base.html.twig' %}
 
+
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block breadcrumb %}
@@ -16,9 +17,6 @@
 {% endblock %}
 
 {% block body %}
-<pre>
-    {# {{ dump(app.user.roles) }} #}
-</pre>
 <div class="container-fluid">
     <!-- Info boxes -->
     <div class="row">
@@ -452,42 +450,42 @@
                 <div class="card-body p-0">
                 <ul class="users-list clearfix">
                     <li>
-                    <img src="dist/img/user1-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user1-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Alexander Pierce</a>
                     <span class="users-list-date">Today</span>
                     </li>
                     <li>
-                    <img src="dist/img/user8-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user8-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Norman</a>
                     <span class="users-list-date">Yesterday</span>
                     </li>
                     <li>
-                    <img src="dist/img/user7-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user7-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Jane</a>
                     <span class="users-list-date">12 Jan</span>
                     </li>
                     <li>
-                    <img src="dist/img/user6-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user6-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">John</a>
                     <span class="users-list-date">12 Jan</span>
                     </li>
                     <li>
-                    <img src="dist/img/user2-160x160.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user2-160x160.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Alexander</a>
                     <span class="users-list-date">13 Jan</span>
                     </li>
                     <li>
-                    <img src="dist/img/user5-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user5-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Sarah</a>
                     <span class="users-list-date">14 Jan</span>
                     </li>
                     <li>
-                    <img src="dist/img/user4-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user4-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Nora</a>
                     <span class="users-list-date">15 Jan</span>
                     </li>
                     <li>
-                    <img src="dist/img/user3-128x128.jpg" alt="User Image">
+                    <img src="{{ asset('adminlte/dist/img/user3-128x128.jpg') }}" alt="User Image">
                     <a class="users-list-name" href="#">Nadia</a>
                     <span class="users-list-date">15 Jan</span>
                     </li>
