--- a/templates/admin/order/adresses.html.twig
+++ b/templates/admin/order/adresses.html.twig
@@ -4,6 +4,8 @@
 {% import "macros/breadcrumb.html.twig" as utils %}
 {% import "macros/alertes.html.twig" as alerte %}
 {% import "macros/button.html.twig" as btn %}
+{% import "macros/link.html.twig" as link %}
+{% import "macros/form.html.twig" as form %}
 {% extends 'admin/base.html.twig' %}
 
 {% block title %}Adress index{% endblock %}
@@ -36,9 +38,7 @@
             <table id="datatable_1" class="table">
                 <thead>
                     <tr>
-                        <th>Id</th>
-                        <th>First_name</th>
-                        <th>Last_name</th>
+                        <th>Full name</th>
                         <th>Phone_number</th>
                         <th>Street</th>
                         <th>Company</th>
@@ -49,15 +49,14 @@
                 <tbody>
                 {% for adress in adresses %}
                     <tr>
-                        <td>{{ adress.id }}</td>
-                        <td>{{ adress.firstName }}</td>
-                        <td>{{ adress.lastName }}</td>
+                        <td>#{{ adress.id }} {{ adress.firstName }} {{ adress.lastName }}</td>
                         <td>{{ adress.phoneNumber }}</td>
                         <td>{{ adress.street }}</td>
                         <td>{{ adress.company }}</td>
                         <td>{{ adress.city }}</td>
                         <td>
-                            <a href="{{ path('adress_edit', {'id': adress.id}) }}"><i class="fas fa-pencil-alt text-success"></i></a>
+                            {{ link.edit(path('adress_edit', {'id': adress.id})) }}
+                            {# {{ form.delete(path('adress_order_delete', {'id': adress.id}), adress.id ) }} #}
                         </td>
                     </tr>
                 {% else %}
