--- a/templates/macros/breadcrumb.html.twig
+++ b/templates/macros/breadcrumb.html.twig
@@ -10,7 +10,7 @@
             <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="{{ path('tableau-de-board') }}">Tableau de board</a></li>
             {% for item in pages %}
-              <li class="breadcrumb-item"><a href="{{ path(item.path) }}">{{ item.name }}</a></li>
+              <li class="breadcrumb-item"><a href="{{ item.path }}">{{ item.name }}</a></li>
             {% endfor %}
               <li class="breadcrumb-item active">{{ pageName }}</li>
             </ol>
