--- a/templates/macros/button.html.twig
+++ b/templates/macros/button.html.twig
@@ -29,6 +29,6 @@
             data-toggle="tooltip"
             data-placement="bottom"
             title="{{ title }}" class="btn btn-{{type}} ">   
-             {{ state }}
+             {{ state|trans }}
     </button>  
 {% endmacro %}
