--- a/templates/macros/search.html.twig
+++ b/templates/macros/search.html.twig
@@ -1,5 +1,5 @@
 {% macro search(form) %}
-<div class="p-3 bg-white">
+<div class="pt-1 mb-3 bg-white">
     <div class="container">
         {{ form_start(form,{action:path('articles'), attr:{
             id:'search-form'
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                    <a href="{{ path('card_index') }}" class="btn">
+                    <a href="{{ path('cart_index') }}" class="btn">
                         Cart 
                         <i class="fa fa-cart-plus text-success fa-1x" aria-hidden="true"></i>
                             <span class="badge badge-pill badge-primary">
