--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,50 +1,72 @@
+{% import "macros/search.html.twig" as search %}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+{{ search.search(form) }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-body">
+                    <form method="post">
+                        {% if error %}
+                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                        {% if app.user %}
+                            <div class="mb-3">
+                                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+                            </div>
+                        {% endif %}
+
+                        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                        <label class="text-primary" for="inputEmail"> <i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
+                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" placeholder="email" class="form-control" autocomplete="email" required autofocus>
+                        <label for="inputPassword" class="text-primary"> <i class="fa fa-lock" aria-hidden="true"></i> Password</label>
+                        <input type="password" name="password" id="inputPassword" placeholder="password" class="form-control" autocomplete="current-password" required>
+
+                        <input type="hidden" name="_csrf_token"
+                            value="{{ csrf_token('authenticate') }}"
+                        >
+
+                        {#
+                            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                            See https://symfony.com/doc/current/security/remember_me.html
+
+                            <div class="checkbox mb-3">
+                                <label>
+                                    <input type="checkbox" name="_remember_me"> Remember me
+                                </label>
+                            </div>
+                        #}
+
+                        <button class="btn mt-1 btn-lg btn-primary w-100" type="submit">
+                            Sign in
+                        </button>
+                    </form>
+                    <a class="text-primary" href="{{ path('app_forgot_password_request') }}">Mot de passe oublie ?</a>
+                </div>
+            </div>
         </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
-<a href="{{ path('app_forgot_password_request') }}">Mot de passe oublie</a>
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h3>Creer un compte</h3>
+                    <p>
+                    Créez votre compte client {{app_name }} en quelques clics ! Vous pouvez vous inscrire soit en utilisant votre adresse e-mail, soit via votre compte Facebook. 
+                    </p>
+                    <a href="{{ path('app_register') }}" class="btn btn-lg btn-primary w-100">Creer mon compte</a>
+                </div>
+            </div>
+        </div>    
     </div>
-    <div class="col-md-8">
-        <table class="table table-striped">
+</div>
+<div class="row">
+    <div class="col-4 mx-auto">
+            <table class="table table-striped">
         <thead>
             <th>id</th>
             <th>email</th>
@@ -59,7 +81,7 @@
             </tr>
         {% endfor %}
         </tbody>
-        </table>
+    </table>
     </div>
 </div>
 {% endblock %}
